@@ -1,3 +1,11 @@
+*gitlab-ce-8.13.3 (03 Nov 2016)
+
+  03 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
+  +files/gitlab-8.13.3-sidekiq.init, +files/gitlab-8.13.3-unicorn.init,
+  +gitlab-ce-8.13.3.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.13.3, also with new init
+  scripts
+
   22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
   www-apps/gitlab-ce:  updated dependencies for gitlab-ce-9999
 
